--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
 		"vite": "^7.2.6"
 	},
 	"dependencies": {
+		"@sveltejs/adapter-static": "^3.0.10",
 		"livekit-client": "^2.17.0",
 		"pocketbase": "^0.26.6"
 	}
